--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8"/>
-    <link rel="manifest" href="manifest.webmanifest">
-
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-    <meta name="theme-color" content="#000000" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
-	<style>
-		body {
-			margin: 0;
-			padding: 0;
-			background-color: #000000;
-            overflow: hidden;
-		}
-        #canvasArea {
-            margin-left: auto;
-            margin-right: auto;
-            overflow: hidden;
-        }
-
-        
-	</style>
+	<head>
+		<meta charset="UTF-8"/>
+		<link rel="manifest" href="manifest.webmanifest">
+		
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+		
+		<meta name="theme-color" content="#000000" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<style>
+			body {
+				margin: 0;
+				padding: 0;
+				background-color: #000000;
+				overflow: hidden;
+			}
+			#canvasArea {
+				margin-left: auto;
+				margin-right: auto;
+				overflow: hidden;
+			}
+			
+			
+			</style>
     <!-- Libs and GDJS core files : -->
-		<script src="libs/jshashtable.js" crossorigin="anonymous"></script>
+	<script src="libs/jshashtable.js" crossorigin="anonymous"></script>
+	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script src="logger.js" crossorigin="anonymous"></script>
 	<script src="gd.js" crossorigin="anonymous"></script>
 	<script src="libs/rbush.js" crossorigin="anonymous"></script>
@@ -141,7 +141,11 @@
 	<script src="code2.js" crossorigin="anonymous"></script>
 	<script src="code3.js" crossorigin="anonymous"></script>
 	<script src="data.js" crossorigin="anonymous"></script>
-
+	<script>
+		window.Telegram.WebApp.ready(function() {
+		  window.Telegram.WebApp.expand();
+		});
+	</script>
 
 </head>
 <body>
