Fix bug change landscape mode

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 
     (function() {
         //Initialization
+		window.Telegram.WebApp.expand();
         var game = new gdjs.RuntimeGame(gdjs.projectData, {});
 
         //Create a renderer
