--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 	<script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
 	<script src="https://unpkg.com/@tonconnect/sdk@latest/dist/tonconnect-sdk.min.js"></script>
 	<script src="node_modules\tonweb\dist\tonweb.js"></script>
+	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 
 </head>
 <body>
