--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
 			manifestUrl: 'https://ton.vote/tonconnect-manifest.json',
 			buttonRootId: 'ton-connect'
 		});
+		tonConnectUI.uiOptions = {
+			twaReturnUrl: 'https://t.me/MechaCat_bot/Cat_Race'
+		};
 	</script>
     
 	<script>
