--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8"/>
-    <link rel="manifest" href="manifest.webmanifest">
+	<meta charset="UTF-8" />
+	<link rel="manifest" href="manifest.webmanifest">
 
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <meta name="theme-color" content="#000000" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="theme-color" content="#000000" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 	<style>
 		body {
 			margin: 0;
 			padding: 0;
 			background-color: #000000;
-            overflow: hidden;
+			overflow: hidden;
 		}
-        #canvasArea {
-            margin-left: auto;
-            margin-right: auto;
-            overflow: hidden;
-        }
 
-        
+		#canvasArea {
+			margin-left: auto;
+			margin-right: auto;
+			overflow: hidden;
+		}
 	</style>
-    <!-- Libs and GDJS core files : -->
-		<script src="libs/jshashtable.js" crossorigin="anonymous"></script>
+	<!-- Libs and GDJS core files : -->
+	<script src="libs/jshashtable.js" crossorigin="anonymous"></script>
 	<script src="logger.js" crossorigin="anonymous"></script>
 	<script src="gd.js" crossorigin="anonymous"></script>
 	<script src="libs/rbush.js" crossorigin="anonymous"></script>
@@ -98,12 +98,16 @@
 	<script src="gdjs-evtsext__spritemultitouchjoystick__angleto4way-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__spritemultitouchjoystick__angleto8way-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__spritemultitouchjoystick__deadzone-func.js" crossorigin="anonymous"></script>
-	<script src="gdjs-evtsext__spritemultitouchjoystick__isanglein4waydirection-func.js" crossorigin="anonymous"></script>
-	<script src="gdjs-evtsext__spritemultitouchjoystick__isanglein8waydirection-func.js" crossorigin="anonymous"></script>
+	<script src="gdjs-evtsext__spritemultitouchjoystick__isanglein4waydirection-func.js"
+		crossorigin="anonymous"></script>
+	<script src="gdjs-evtsext__spritemultitouchjoystick__isanglein8waydirection-func.js"
+		crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__spritemultitouchjoystick__isbuttonpressed-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__spritemultitouchjoystick__isbuttonreleased-func.js" crossorigin="anonymous"></script>
-	<script src="gdjs-evtsext__spritemultitouchjoystick__isdirectionpushed4way-func.js" crossorigin="anonymous"></script>
-	<script src="gdjs-evtsext__spritemultitouchjoystick__isdirectionpushed8way-func.js" crossorigin="anonymous"></script>
+	<script src="gdjs-evtsext__spritemultitouchjoystick__isdirectionpushed4way-func.js"
+		crossorigin="anonymous"></script>
+	<script src="gdjs-evtsext__spritemultitouchjoystick__isdirectionpushed8way-func.js"
+		crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__spritemultitouchjoystick__joystickangle-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__spritemultitouchjoystick__joystickforce-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__spritemultitouchjoystick__multitouchjoystick.js" crossorigin="anonymous"></script>
@@ -118,14 +122,18 @@
 	<script src="Extensions/DebuggerTools/debuggertools.js" crossorigin="anonymous"></script>
 	<script src="Extensions/DraggableBehavior/draggableruntimebehavior.js" crossorigin="anonymous"></script>
 	<script src="Extensions/LinkedObjects/linkedobjects.js" crossorigin="anonymous"></script>
-	<script src="Extensions/PanelSpriteObject/panelspriteruntimeobject-pixi-renderer.js" crossorigin="anonymous"></script>
+	<script src="Extensions/PanelSpriteObject/panelspriteruntimeobject-pixi-renderer.js"
+		crossorigin="anonymous"></script>
 	<script src="Extensions/PanelSpriteObject/panelspriteruntimeobject.js" crossorigin="anonymous"></script>
-	<script src="Extensions/PrimitiveDrawing/pixi-graphics-extras/graphics-extras.min.js" crossorigin="anonymous"></script>
-	<script src="Extensions/PrimitiveDrawing/shapepainterruntimeobject-pixi-renderer.js" crossorigin="anonymous"></script>
+	<script src="Extensions/PrimitiveDrawing/pixi-graphics-extras/graphics-extras.min.js"
+		crossorigin="anonymous"></script>
+	<script src="Extensions/PrimitiveDrawing/shapepainterruntimeobject-pixi-renderer.js"
+		crossorigin="anonymous"></script>
 	<script src="Extensions/PrimitiveDrawing/shapepainterruntimeobject.js" crossorigin="anonymous"></script>
 	<script src="Extensions/TextObject/textruntimeobject-pixi-renderer.js" crossorigin="anonymous"></script>
 	<script src="Extensions/TextObject/textruntimeobject.js" crossorigin="anonymous"></script>
-	<script src="Extensions/TiledSpriteObject/tiledspriteruntimeobject-pixi-renderer.js" crossorigin="anonymous"></script>
+	<script src="Extensions/TiledSpriteObject/tiledspriteruntimeobject-pixi-renderer.js"
+		crossorigin="anonymous"></script>
 	<script src="Extensions/TiledSpriteObject/tiledspriteruntimeobject.js" crossorigin="anonymous"></script>
 	<script src="Extensions/TweenBehavior/TweenManager.js" crossorigin="anonymous"></script>
 	<script src="Extensions/TweenBehavior/tweenruntimebehavior.js" crossorigin="anonymous"></script>
@@ -149,37 +157,40 @@
 	<script src="https://unpkg.com/@tonconnect/sdk@latest/dist/tonconnect-sdk.min.js"></script>
 
 </head>
+
 <body>
 	<div id="ton-connect" style="display: none;"></div>
 	<script>
 		const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
 			manifestUrl: 'https://ton.vote/tonconnect-manifest.json',
-			buttonRootId: 'ton-connect'
+			buttonRootId: 'ton-connect',
+
 		});
 		tonConnectUI.uiOptions = {
-			twaReturnUrl: 'https://t.me/MechaCat_bot/Cat_Race'
+			twaReturnUrl: 'https://t.me/durov',
 		};
 	</script>
-    
+
 	<script>
 
-    (function() {
-        //Initialization
-		window.Telegram.WebApp.expand();
-        var game = new gdjs.RuntimeGame(gdjs.projectData, {});
+		(function () {
+			//Initialization
+			window.Telegram.WebApp.expand();
+			var game = new gdjs.RuntimeGame(gdjs.projectData, {});
 
-        //Create a renderer
-        game.getRenderer().createStandardCanvas(document.body);
+			//Create a renderer
+			game.getRenderer().createStandardCanvas(document.body);
 
-        //Bind keyboards/mouse/touch events
-        game.getRenderer().bindStandardEvents(game.getInputManager(), window, document);
+			//Bind keyboards/mouse/touch events
+			game.getRenderer().bindStandardEvents(game.getInputManager(), window, document);
 
-        //Load all assets and start the game
-        game.loadAllAssets(function() {
-            game.startGameLoop();
-        });
-    })();
+			//Load all assets and start the game
+			game.loadAllAssets(function () {
+				game.startGameLoop();
+			});
+		})();
 
 	</script>
 </body>
+
 </html>
