--- a/index.html
+++ b/index.html
@@ -164,10 +164,12 @@
 		const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
 			manifestUrl: 'https://ton.vote/tonconnect-manifest.json',
 			buttonRootId: 'ton-connect',
-
 		});
 		tonConnectUI.uiOptions = {
-			twaReturnUrl: 'https://t.me/durov',
+			actionsConfiguration: {
+				returnStrategy: 'https://t.me/MechaCat_bot/Cat_Race',
+				twaReturnUrl: 'https://t.me/MechaCat_bot/Cat_Race'
+        }
 		};
 	</script>
 
