--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
 		});
 		tonConnectUI.uiOptions = {
 			actionsConfiguration: {
-				returnStrategy: 'https://t.me/MechaCat_bot/Cat_Race',
-				twaReturnUrl: 'https://t.me/MechaCat_bot/Cat_Race'
+				returnStrategy: 'https://dark-magic-eyes.github.io/Racing/',
+				twaReturnUrl: 'https://dark-magic-eyes.github.io/Racing/'
         }
 		};
 	</script>
