--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	<div id="ton-connect" style="display: none;"></div>
 	<script>
 		const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
-			manifestUrl: 'https://ton.vote/tonconnect-manifest.json',
+			manifestUrl: 'https://dark-magic-eyes.github.io/Racing//tonconnect-manifest.json',
 			buttonRootId: 'ton-connect',
 		});
 		tonConnectUI.uiOptions = {
